changes with dan